--- a/index.html
+++ b/index.html
@@ -14,24 +14,23 @@
       </td>
       <td>
         <h1>Ethan Galloway</h1>
-        <p><em>Founder and CEO of this website</em></p>
-        <p>Ethan Galloway is the former owner and opperator of a contruction company
+        <p><em>Founder of this website</em></p>
+        <p>Ethan Galloway is the former owner and operator of a contruction company
           in Mississippi. He recently sold some of his equipment and trucks to move
           to Costa Rica for a better life full of web developing and surfing. He has
           realized in this life there is more to just working everyday 9-5, or in his
           case most days 7-8 or later. He encourages everyone who wants a life of
           freedom and flexibility to pursue a career online that allows for the better
-          things in life to be more abundant and easily atainable. I hope you all too,
-          can enjoy life to the fullest. </p>
+          things in life to be easily attainable. </p>
       </td>
     </tr>
   </table>
   <hr><br>
   <h3><b>Teachings</b></h3>
   <ul>
-    <li>Ethan Galloway has no formal education outside of highschool.</li>
-    <li>Very knowledgeable in residential construction</li>
-    <li>Surfing and web development are new wants and skills he is currently
+    <li>Has no formal education outside of highschool.</li>
+    <li>Knowledgeable in residential construction</li>
+    <li>Surfing and web development are new skills he is currently
       trying to learn</li>
   </ul>
   <hr><br>
